Fix the table vertical stretching

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,16 +5,8 @@
   --background-colour: #2E2A6D;
 }
 
-/* :root {
-  --text-colour: #bb8a89;
-  --table-bg-colour: #785589;
-  --table-border-colour: #ac7b7d;
-  --background-colour: #0d160b;
-} */
-
 body {
   background-color: var(--background-colour);
-  /* padding-top: 2.5%; */
 }
 
 * {
@@ -34,9 +26,12 @@ h1 {
 }
 
 .row {
-  display: flex;
+  /* display: flex; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   padding-inline: 15%;
   width: 100%;
+  align-items: stretch;
 }
 
 .column {
@@ -46,6 +41,21 @@ h1 {
   padding-top: 1%;
   border-width: 2px;
   border-color: var(--table-border-colour);
+
+  display: flex;
+  flex-direction: column;
+}
+
+.table-wrapper {
+  flex: 1;
+  border-style: solid;
+  border-color: var(--table-border-colour);
+  border-width: 3px;
+  border-radius: 2%;
+  background-color: var(--table-bg-colour);
+  padding: 6px;
+  display: flex;
+  flex-direction: column;
 }
 
 table {
@@ -53,32 +63,30 @@ table {
   border: none;
   border-collapse: separate;
   border-spacing: 0;
-
   background-color: var(--table-bg-colour);
-
-  border-style: solid;
-  border-color: var(--table-border-colour);
-  border-width: 3px;
-  border-radius: 2%;
-
   display: table;
   table-layout: fixed;
+  height: auto;
+  align-items: stretch;
 }
 
 table tbody {
   display: table;
   width: 100%;
+  height: 100%;
   padding-inline: 5%;
   padding-bottom: 4%;
   padding-top: 2%;
+}
 
-  /* padding-block: 5%; */
+table tr {
+  height: auto;
 }
 
 table td {
   width: 50%;
-  border-style: none;
-  border-width: 1px;
+  vertical-align: top;
+  justify-content: flex-start;
 }
 
 table td:nth-child(1) {
@@ -94,26 +102,8 @@ table th {
   text-align: center;
 }
 
-.row#current-task {
-  /* align-items: center;
-  justify-content: center; */
+.column#current-task {
   text-align: center;
-  /* padding: 0%; */
+  align-items: stretch;
+  padding-top: 0.5%;
 }
-
-.row#current-task table {
-  /* padding-top: 1%; */
-  padding-block: 0%;
-  border-style: hidden;
-}
-
-/* .column {
-  background: rgba(255, 0, 0, 0.2);
-}
-
-table {
-  background: rgba(0, 255, 0, 0.2);
-}
-
-table {
-} */
